--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,40 @@
 body {
   margin: 0;
+  padding: 0;
+}
+
+.App {
+  padding: 5px;
+  width: 100vw;
+  height: 100vh;
+  font-family: sans-serif;
+  text-align: center;
+}
+.App.darkmode {
+  background: black;
+  color: white;
+}
+
+button,
+input,
+select {
+  margin: 5px;
+  padding: 5px;
+  background: white;
+  border: 3px solid black;
+  color: black;
+}
+.darkmode button,
+.darkmode input,
+.darkmode select {
+  background: black;
+  border: 3px solid white;
+  color: white;
+}
+.error {
+  color: red;
+}
+.sheet {
+  margin: 5px auto;
+  text-align: left;
 }
